--- a/rmsmf/rmsmf.csproj
+++ b/rmsmf/rmsmf.csproj
@@ -77,7 +77,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ByteOrderMarkJudgment.cs" />
     <Compile Include="Colipex.cs" />
+    <Compile Include="CommandOptions.cs" />
+    <Compile Include="EncodingJudgment.cs" />
+    <Compile Include="ExecutionState.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
