--- a/rmsmf/rmsmf.csproj
+++ b/rmsmf/rmsmf.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReplaceStringsInFiles.cs" />
+    <Compile Include="RmsmfException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
