--- a/rmsmf/rmsmf.csproj
+++ b/rmsmf/rmsmf.csproj
@@ -90,10 +90,12 @@
     <Compile Include="EncodingJudgment.cs" />
     <Compile Include="ExecutionState.cs" />
     <Compile Include="Help.cs" />
+    <Compile Include="OptionValidator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReplaceStringsInFiles.cs" />
     <Compile Include="RmsmfException.cs" />
+    <Compile Include="ValidationMessages.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
