--- a/txprobe/txprobe.csproj
+++ b/txprobe/txprobe.csproj
@@ -57,13 +57,18 @@
     </Compile>
     <Compile Include="CommandOptions.cs" />
     <Compile Include="Help.cs" />
+    <Compile Include="OptionValidator.cs" />
     <Compile Include="ProbeFiles.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RmsmfException.cs" />
+    <Compile Include="ValidationMessages.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\rmsmf\rmsmf.csproj" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
