--- a/txprobe/packages.config
+++ b/txprobe/packages.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net481" />
   <package id="System.Text.Encoding.CodePages" version="4.7.1" targetFramework="net481" />
