--- a/txprobe/txprobe.csproj
+++ b/txprobe/txprobe.csproj
@@ -60,8 +60,8 @@
     <Compile Include="..\rmsmf\Colipex.cs">
       <Link>Colipex.cs</Link>
     </Compile>
-    <Compile Include="..\rmsmf\EncodingJudgment.cs">
-      <Link>EncodingJudgment.cs</Link>
+    <Compile Include="..\rmsmf\EncodingDetector.cs">
+      <Link>EncodingDetector.cs</Link>
     </Compile>
     <Compile Include="..\rmsmf\ExecutionState.cs">
       <Link>ExecutionState.cs</Link>
